# rssh

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  display.rs  main.rs
